fix: overflow on mobile version

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,9 +7,13 @@ html {
   font-size: 10px;
 }
 
+html,
 body {
-  background-color: var(--grayscale-color-01);
   overflow-x: hidden;
+}
+body {
+  position: relative;
+  background-color: var(--grayscale-color-01);
 }
 
 body[hideOverflowY="true"] {
